# deployment

./: .gitignore  architecture.md  client-dashboard.md  dashboard-framework-choice.md  engineering-standards.md  event-schemas.md  implementation-roadmap.md  learning-roadmap.md  litile_overview.md  platform-contracts.md
control_plane/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
control_plane/app/: main.py
control_plane/app/artifact_store/: __init__.py  base.py  factory.py  local.py  r2.py
control_plane/app/audit/: repository.py  service.py
control_plane/app/auth/: passwords.py  pkce.py  schemas.py  social_service.py  tokens.py  user_auth_service.py  user_repository.py
control_plane/app/background_builder/: __init__.py  base.py  factory.py
control_plane/app/builds/: repository.py  schemas.py  service.py
control_plane/app/celery_builder/: __init__.py  builder.py  celery_app.py  cli.py  dispatcher.py  execution.py  runner.py  tasks.py  worker_cli.py
control_plane/app/cloudflare_builder/: __init__.py  builder.py  contracts.py  pull_consumer.py
control_plane/app/core/: config.py  context.py  dependencies.py  exceptions.py  logging.py  span_attributes_middleware.py  tracing.py
control_plane/app/db/: base.py  session.py
control_plane/app/deployments/: repository.py  schemas.py  service.py
control_plane/app/environments/: repository.py  schemas.py  service.py
control_plane/app/github/: __init__.py  auth.py  repository.py  schemas.py  service.py  webhooks.py
control_plane/app/logs/: repository.py  schemas.py  service.py
control_plane/app/projects/: repository.py  schemas.py  service.py
control_plane/app/releases/: repository.py  schemas.py  service.py
control_plane/app/static_releases/: __init__.py  manifest.py
control_plane/deploy/: README.md
control_plane/migrations/: env.py
control_plane/migrations/versions/: 7ef56e7630c0_set_up_projects.py
control_plane/tests/: conftest.py  test_audit_flow.py  test_auth_social.py  test_builds.py  test_deployments.py  test_github_integration.py  test_github_webhooks.py  test_health.py  test_logs.py  test_projects.py  test_redis_lifespan.py  test_releases.py
control_plane/tests/e2e/: test_user_flow_celery.py
control_plane/tests/integration/: test_auth.py  test_cloudflare_queue_loop.py  test_fake_builder_dispatch.py  test_route_resolution_r2_stub.py
control_plane/tests/unit/: test_artifact_store_factory.py  test_auth_integrity.py  test_auth_spies.py  test_auth_unit.py  test_background_build_service.py  test_background_builder_factory.py  test_celery_and_cloudflare_builders.py  test_cloudflare_pull_consumer.py  test_fake_builder_dispatcher.py  test_fake_builder_tasks.py  (+3 more)
(+103 files in other folders)
