[project]
name = "control-plane"
version = "0.1.0"
description = "Deployment platform control plane — source of truth for projects, builds, deployments, and releases"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
    "passlib[bcrypt]>=1.7",
    "sse-starlette>=2",
    "httpx>=0.28.1",
    "redis>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "ruff>=0.5",
    "aiosqlite>=0.20",
    "faker>=26",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
